--- a/Lab03/index.html
+++ b/Lab03/index.html
@@ -26,6 +26,7 @@
          <p>Hello <span style="color: red;" id="name"></span>, I am deyaa pozan from Syria, I graduated from Zarqa University with a major in Computer Science. I am a web developer.</p>
         </div>
         <h2>Top 10 Programming Languages for 2021</h2>
+        <div class="list">
         <ul> 
             <li>Python</li>
             <li>JavaScript</li>
@@ -38,6 +39,13 @@
             <li>R</li>
             <li>PHP</li>
         </ul>
+    </div>
+    <div class="text">
+        If you’re new to the field of software development, the toughest part of learning programming is deciding where to begin. There are hundreds of programming languages in widespread use, each with its own complexities and idiosyncrasies.
+
+        The good news is that as you begin your journey as a software developer, you’ll start to discover which programming language will be most suitable for you, your interests, and your career goals.
+        
+        In the list below, we go over the best and most in-demand programming languages for many of the most common use cases including web development, mobile development, game development, and more.</div>
     </main>
     <footer>
 
